--- a/.project
+++ b/.project
@@ -16,7 +16,7 @@
 			</arguments>
 		</buildCommand>
 	</buildSpec>
-	<natures>
+	</natures>
 		<nature>org.springframework.ide.eclipse.core.springnature</nature>
 		<nature>org.springsource.ide.eclipse.gradle.core.nature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
